compiler/tools/fpp-check/test/invalid_symbols/module_as_state_machine.fpp
module M {}

active component C {
    state machine instance s1: M 
}
